// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:breadcrumb 1`] = `
<div>
  <div
    class="cxd-Breadcrumb"
  >
    <span
      class="cxd-Breadcrumb-item"
    >
      <a
        class="cxd-Breadcrumb-item-default"
        href="https://baidu.gitee.com/"
      >
        <i
          class="fa fa-home cxd-Icon cxd-Breadcrumb-icon fa fa-home"
        />
        <span
          class="cxd-TplField fr-view"
        >
          首页
        </span>
      </a>
    </span>
    <span
      class="cxd-Breadcrumb-separator"
    >
      &gt;
    </span>
    <span
      class="cxd-Breadcrumb-item"
    >
      <span
        class="cxd-Breadcrumb-item-default"
      >
        <span
          class="cxd-TplField fr-view"
        >
          上级页面
        </span>
      </span>
    </span>
    <span
      class="cxd-Breadcrumb-separator"
    >
      &gt;
    </span>
    <span
      class="cxd-Breadcrumb-item cxd-Breadcrumb-item-last"
    >
      <span
        class="cxd-Breadcrumb-item-default"
      >
        <span
          class="cxd-TplField fr-view"
        >
          当前页面
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Renderer:breadcrumb className 1`] = `
<div>
  <div
    class="cxd-Breadcrumb className"
  >
    <span
      class="cxd-Breadcrumb-item"
    >
      <a
        class="cxd-Breadcrumb-item-default itemClassName"
        href="https://baidu.gitee.com/"
      >
        <i
          class="fa fa-home cxd-Icon cxd-Breadcrumb-icon fa fa-home"
        />
        <span
          class="cxd-TplField fr-view"
        >
          首页
        </span>
      </a>
    </span>
    <span
      class="cxd-Breadcrumb-separator"
    >
      &gt;
    </span>
    <span
      class="cxd-Breadcrumb-item is-opened"
    >
      <span
        class="cxd-Breadcrumb-item-default itemClassName"
      >
        <span
          class="cxd-TplField fr-view"
        >
          上级页面
        </span>
      </span>
      <span
        class="cxd-Breadcrumb-item-caret"
      >
        <icon-mock
          classname="icon icon-down"
          icon="down"
        />
      </span>
      <ul
        class="cxd-Breadcrumb-dropdown dropdownClassName"
      >
        <li>
          <a
            class="cxd-Breadcrumb-item-dropdown dropdownItemClassName"
            href="https://baidu.gitee.com/"
          >
            <span
              class="cxd-TplField fr-view"
            >
              选项一
            </span>
          </a>
        </li>
        <li>
          <span
            class="cxd-Breadcrumb-item-dropdown dropdownItemClassName"
          >
            <span
              class="cxd-TplField fr-view"
            >
              选项二
            </span>
          </span>
        </li>
      </ul>
    </span>
    <span
      class="cxd-Breadcrumb-separator"
    >
      &gt;
    </span>
    <span
      class="cxd-Breadcrumb-item cxd-Breadcrumb-item-last"
    >
      <span
        class="cxd-Breadcrumb-item-default itemClassName"
      >
        <span
          class="cxd-TplField fr-view"
        >
          当前页面
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Renderer:breadcrumb dropdown 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-Breadcrumb"
          >
            <span
              class="cxd-Breadcrumb-item"
            >
              <a
                class="cxd-Breadcrumb-item-default"
                href="https://baidu.gitee.com/"
              >
                <i
                  class="fa fa-home cxd-Icon cxd-Breadcrumb-icon fa fa-home"
                />
                <span
                  class="cxd-TplField fr-view"
                >
                  首页
                </span>
              </a>
            </span>
            <span
              class="cxd-Breadcrumb-separator"
            >
              &gt;
            </span>
            <span
              class="cxd-Breadcrumb-item"
            >
              <span
                class="cxd-Breadcrumb-item-default"
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  上级页面
                </span>
              </span>
              <span
                class="cxd-Breadcrumb-item-caret"
              >
                <icon-mock
                  classname="icon icon-down"
                  icon="down"
                />
              </span>
            </span>
            <span
              class="cxd-Breadcrumb-separator"
            >
              &gt;
            </span>
            <span
              class="cxd-Breadcrumb-item cxd-Breadcrumb-item-last"
            >
              <span
                class="cxd-Breadcrumb-item-default"
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  当前页面
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:breadcrumb separator 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-Breadcrumb"
          >
            <span
              class="cxd-Breadcrumb-item"
            >
              <a
                class="cxd-Breadcrumb-item-default"
                href="https://baidu.gitee.com/"
              >
                <i
                  class="fa fa-home cxd-Icon cxd-Breadcrumb-icon fa fa-home"
                />
                <span
                  class="cxd-TplField fr-view"
                >
                  首页
                </span>
              </a>
            </span>
            <span
              class="cxd-Breadcrumb-separator text-black"
            >
              &gt;
            </span>
            <span
              class="cxd-Breadcrumb-item"
            >
              <span
                class="cxd-Breadcrumb-item-default"
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  上级页面
                </span>
              </span>
            </span>
            <span
              class="cxd-Breadcrumb-separator text-black"
            >
              &gt;
            </span>
            <span
              class="cxd-Breadcrumb-item cxd-Breadcrumb-item-last"
            >
              <span
                class="cxd-Breadcrumb-item-default"
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  当前页面
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:breadcrumb tooltip labelMaxLength 1`] = `
<div>
  <div
    class="amis-Page"
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page-content"
    >
      <div
        class="amis-Page-main"
      >
        <div
          class="amis-Page-body"
          role="page-body"
        >
          <div
            class="amis-Breadcrumb"
          >
            <span
              class="amis-Breadcrumb-item"
            >
              <a
                class="amis-Breadcrumb-item-default"
                href="https://baidu.gitee.com/"
              >
                <i
                  class="fa fa-home amis-Icon amis-Breadcrumb-icon fa fa-home"
                />
                <span
                  class="amis-TplField fr-view"
                />
              </a>
            </span>
            <span
              class="amis-Breadcrumb-separator text-black"
            >
              &gt;
            </span>
            <span
              class="amis-Breadcrumb-item"
            >
              <a
                class="amis-Breadcrumb-item-default"
              >
                <span
                  class="amis-TplField fr-view"
                >
                  上级页面上级页面上级页面上级页面...
                </span>
              </a>
            </span>
            <span
              class="amis-Breadcrumb-separator text-black"
            >
              &gt;
            </span>
            <span
              class="amis-Breadcrumb-item amis-Breadcrumb-item-last"
            >
              <span
                class="amis-Breadcrumb-item-default"
              >
                <span
                  class="amis-TplField fr-view"
                >
                  当前页面
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:breadcrumb tooltip labelMaxLength 2`] = `
<div>
  <div
    class="amis-Page"
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page-content"
    >
      <div
        class="amis-Page-main"
      >
        <div
          class="amis-Page-body"
          role="page-body"
        >
          <div
            class="amis-Breadcrumb"
          >
            <span
              class="amis-Breadcrumb-item"
            >
              <a
                class="amis-Breadcrumb-item-default"
                href="https://baidu.gitee.com/"
              >
                <i
                  class="fa fa-home amis-Icon amis-Breadcrumb-icon fa fa-home"
                />
                <span
                  class="amis-TplField fr-view"
                />
              </a>
            </span>
            <span
              class="amis-Breadcrumb-separator text-black"
            >
              &gt;
            </span>
            <span
              class="amis-Breadcrumb-item"
            >
              <a
                class="amis-Breadcrumb-item-default"
              >
                <span
                  class="amis-TplField fr-view"
                >
                  上级页面上级页面上级页面上级页面...
                </span>
              </a>
            </span>
            <span
              class="amis-Breadcrumb-separator text-black"
            >
              &gt;
            </span>
            <span
              class="amis-Breadcrumb-item amis-Breadcrumb-item-last"
            >
              <span
                class="amis-Breadcrumb-item-default"
              >
                <span
                  class="amis-TplField fr-view"
                >
                  当前页面
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:breadcrumb tooltip labelMaxLength 3`] = `
<div>
  <div
    class="amis-Page"
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page-content"
    >
      <div
        class="amis-Page-main"
      >
        <div
          class="amis-Page-body"
          role="page-body"
        >
          <div
            class="amis-Breadcrumb"
          >
            <span
              class="amis-Breadcrumb-item"
            >
              <a
                class="amis-Breadcrumb-item-default"
                href="https://baidu.gitee.com/"
              >
                <i
                  class="fa fa-home amis-Icon amis-Breadcrumb-icon fa fa-home"
                />
                <span
                  class="amis-TplField fr-view"
                />
              </a>
            </span>
            <span
              class="amis-Breadcrumb-separator text-black"
            >
              &gt;
            </span>
            <span
              class="amis-Breadcrumb-item"
            >
              <a
                class="amis-Breadcrumb-item-default"
              >
                <span
                  class="amis-TplField fr-view"
                >
                  上级页面上级页面上级页面上级页面...
                </span>
              </a>
            </span>
            <span
              class="amis-Breadcrumb-separator text-black"
            >
              &gt;
            </span>
            <span
              class="amis-Breadcrumb-item amis-Breadcrumb-item-last"
            >
              <span
                class="amis-Breadcrumb-item-default"
              >
                <span
                  class="amis-TplField fr-view"
                >
                  当前页面
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:breadcrumb tooltip labelMaxLength 4`] = `
<div>
  <div
    class="amis-Page"
    data-amis-theme="cxd"
  >
    <div
      class="amis-Page-content"
    >
      <div
        class="amis-Page-main"
      >
        <div
          class="amis-Page-body"
          role="page-body"
        >
          <div
            class="amis-Breadcrumb"
          >
            <span
              class="amis-Breadcrumb-item"
            >
              <a
                class="amis-Breadcrumb-item-default"
                href="https://baidu.gitee.com/"
              >
                <i
                  class="fa fa-home amis-Icon amis-Breadcrumb-icon fa fa-home"
                />
                <span
                  class="amis-TplField fr-view"
                />
              </a>
            </span>
            <span
              class="amis-Breadcrumb-separator text-black"
            >
              &gt;
            </span>
            <span
              class="amis-Breadcrumb-item"
            >
              <a
                class="amis-Breadcrumb-item-default"
              >
                <span
                  class="amis-TplField fr-view"
                >
                  上级页面上级页面上级页面上级页面...
                </span>
              </a>
            </span>
            <span
              class="amis-Breadcrumb-separator text-black"
            >
              &gt;
            </span>
            <span
              class="amis-Breadcrumb-item amis-Breadcrumb-item-last"
            >
              <span
                class="amis-Breadcrumb-item-default"
              >
                <span
                  class="amis-TplField fr-view"
                >
                  当前页面
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:breadcrumb var 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-Page-content"
    >
      <div
        class="cxd-Page-main"
      >
        <div
          class="cxd-Page-body"
          role="page-body"
        >
          <div
            class="cxd-Breadcrumb"
          >
            <span
              class="cxd-Breadcrumb-item"
            >
              <a
                class="cxd-Breadcrumb-item-default"
                href="https://baidu.gitee.com/"
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  首页
                </span>
              </a>
            </span>
            <span
              class="cxd-Breadcrumb-separator"
            >
              &gt;
            </span>
            <span
              class="cxd-Breadcrumb-item"
            >
              <span
                class="cxd-Breadcrumb-item-default"
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  上级页面
                </span>
              </span>
            </span>
            <span
              class="cxd-Breadcrumb-separator"
            >
              &gt;
            </span>
            <span
              class="cxd-Breadcrumb-item cxd-Breadcrumb-item-last"
            >
              <span
                class="cxd-Breadcrumb-item-default"
              >
                <span
                  class="cxd-TplField fr-view"
                >
                  当前页面
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
